# desktop_streamer

./: Cargo.toml  EXEMPLOS_MODIFICACAO.md  GUIA_ESTUDOS.md  README.md  REFERENCIA_RAPIDA.md  melhorias.md
src/: audio_detection.rs  config.rs  main.rs  media.rs  server.rs  virtual_audio.rs  webrtc_handler.rs
static/: index.html  performance-monitor.js  script.js  style.css  vr-environment.js
