[package]
name = "desktop_streamer"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
ashpd = { version = "0.10.0", features = ["tracing"] }
axum = { version = "0.8.4", features = ["ws"] }
axum-server = "0.7.2"
bytes = "1.6.0"
cpal = "0.16.0"
futures = "0.3.30"
gstreamer = "0.23.6"
gstreamer-app = "0.23.5"
gstreamer-audio = "0.23.6"
gstreamer-video = "0.23.6"
num_cpus = "1.16.0"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
webrtc = { version = "0.13.0" }